tools/tests/errors/surf_exc_15.ki
# zfill to a huge width is guarded (raises, not OOM)
discard "1".zfill(100000000000)
